buat footer, mainhero, rosters header

--- a/wp-content/themes/website-3vhs/style/style.css
+++ b/wp-content/themes/website-3vhs/style/style.css
@@ -1,4 +1,129 @@
+@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
+
+
 :root{
     --orange: #F07F1A;
     --biru: #1C1565;
+    --putih: #FFFFFF;
+
+    /* font size */
+    --text-xs: 12px;
+    --text-sm: 14px;
+    --text-normal: 16px; 
+    --text-lg: 18px; 
+    --text-xl: 20px; 
+    --text-2xl: 24px; 
+    --text-3xl: 30px; 
+    --text-4xl: 36px; 
+    --text-5xl: 48px; 
+    --text-6xl: 60px; 
+    --text-7xl: 72px; 
+    --text-8xl: 96px; 
+    --text-9xl: 128px; 
+}
+
+body{
+    font-family: 'Helvetica Neue', sans-serif;
+}
+
+
+/*=================================================*/
+/*==================== BERANDA ====================*/
+/*=================================================*/
+
+/*====================*/
+/*===== MAINHERO =====*/
+/*====================*/
+
+.mainhero{
+    width: 100%;
+    height: 40vw;
+
+    padding: 32px 16px;
+
+    background-color: var(--biru);
+}
+.mainhero .mainhero-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+}
+.mainhero .mainhero-container img{
+    width: 60%;
+}
+
+/*===================*/
+/*===== ROSTERS =====*/
+/*===================*/
+
+.rosters .header{
+    padding: 100px;
+
+    background-color: var(--orange);
+    background-size: contain;
+    background-position: center;
+}
+.rosters .header h2{
+    text-align: center;
+    font-size: var(--text-6xl);
+    color: var(--putih);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*==================*/
+/*===== FOOTER =====*/
+/*==================*/
+
+footer{
+    background-color: var(--orange);
+    padding: 32px 16px;
+}
+footer .footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 32px;
+}
+footer .footer-container .daftar{
+    width: 50%;
+}
+footer .footer-container h3{
+    font-size: var(--text-5xl);
+    font-weight: 500;
+    color: var(--putih);
+}
+footer .footer-container p{
+    font-size: var(--text-normal);
+    font-weight: 400;
+    color: var(--putih);
+}
+footer .footer-container .sparing{
+    width: 50%;
 }
