--- a/wp-content/themes/website-3vhs/style/style.css
+++ b/wp-content/themes/website-3vhs/style/style.css
@@ -1,9 +1,10 @@
+/* @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55'); */
+
 *{
     padding: 0;
     margin: 0;
+    /* border: 1px solid red; */
 }
-@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
-
 
 :root{
     --orange: #F07F1A;
@@ -34,43 +35,69 @@
 nav{
     background-color:var(--biru);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 16px 0;
 }
-ul{
+
+nav .nav-logo{
+    width: 5%;
+    height: 100%;
+}
+nav .nav-logo img{
+    width: 100%;
+}
+
+nav .nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 100%;
+}
+
+.nav-links{
     list-style:none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 60%;
     /* gap: 20px; */
 }
 
 
-li>a{
+.nav-links a{
+    position: relative;
     text-decoration: none;
-    font-size: 30px;
+    font-size: var(--text-xl);
     color: white;
     transition: 200ms;
-
-  
+    /* font-weight: bold; */
 }
-li>a:hover{
+.nav-links a:hover{
     color: rgb(171, 171, 171);
     /* text-decoration: underline; */
     /* color: red; */
     transition: 200ms;
 }
 
+.nav-links a::after{
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
 
-.activate{
+    width: 0%;
+    height: 3px;
     background-color: var(--orange);
-    padding: 5px 8px;
-    text-decoration: none;
-    font-size: 30px;
-    color: white;
-    --text-9xl: 128px; 
+
+    transition: .25s;
+}
+
+.nav-links a:hover::after{
+    /* height: 3px; */
+    width: 100%;
 }
 
 body{
