--- a/wp-content/themes/website-3vhs/style/output.css
+++ b/wp-content/themes/website-3vhs/style/output.css
@@ -587,7 +587,7 @@ video {
   line-height: 2.5rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
