--- a/wp-content/themes/website-3vhs/style/style.css
+++ b/wp-content/themes/website-3vhs/style/style.css
@@ -82,7 +82,7 @@ nav{
     width: 100%;
     /* height: 50px; */
 
-    background-color:var(--biru1);
+    background-color:var(--biru2);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -794,6 +794,7 @@ main#rosters-boys{
 .players-position{
     padding-top: 70px;
     padding-bottom: 70px;
+    margin-top: 32px;
     background-color: rgba(0, 0, 0, 0.30);
 }
 .players-position h2{
@@ -849,32 +850,65 @@ main#rosters-boys{
 /*===== FOOTER =====*/
 /*==================*/
 
-footer{
-    background-color: var(--orange1);
-    padding: 32px 16px;
-}
-footer .footer-container{
+footer {
+    background-color: var(--biru2);
+    /* height: 817px; */
+    padding: 32px;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 32px;
-}
-footer .footer-container .daftar{
-    width: 50%;
-}
-footer .footer-container h3{
-    font-size: var(--text-5xl);
-    font-weight: 500;
-    color: var(--putih);
-}
-footer .footer-container p{
-    font-size: var(--text-normal);
+    justify-content: center;
+    align-items: center;
+  }
+  .containerFooter{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  
+  
+  }
+  
+  .containerFooter h1 {
+    font-family: var(--compacta);
     font-weight: 400;
-    color: var(--putih);
-}
-footer .footer-container .sparing{
-    width: 50%;
-}
+    font-size: 70px;
+    line-height: 66px;
+    color: var(--orange1);
+    text-transform: uppercase;
+  }
+  .contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .contact h2 {
+    font-family:var(--outfit);
+    font-size: 40px;
+    font-weight: 400;
+    color: var(--orange1);
+    margin-top:100px;
+  }
+  
+  .contact div{
+    font-family: var(--outfit);
+    font-size: 40px;
+    font-weight: 600;
+    color: var(--orange1);
+  }
+  
+  .sparing {
+    display: flex;
+    height: 266px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .lh-23{
+    line-height: 23px;
+  }
+  
+  .h-50{
+    height: 50px;
+  }
 
 
 
